# ansible-role-mongos

./: .ansible-lint-ignore  .gitignore  .talismanrc  .yamllint  LICENSE  Makefile  README.md  pyproject.toml  requirements.yml
.github/workflows/: lint.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/common/: prepare.yml  verify.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/hold/: converge.yml  molecule.yml  prepare.yml  side_effect.yml  verify.yml
molecule/install/: converge.yml  molecule.yml  prepare.yml  verify.yml
tasks/: config.yml  lock.yml  main.yml  service.yml
templates/: mongos.j2.yaml  systemd.service.j2
