[tool.poetry]
name = "nephelaiio.mongos"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
netaddr = "^1.3.0"
yamllint = "^1.35.1"
ansible = "^11.2.0"
molecule-docker = "^2.1.0"
molecule = "^25.2.0"
ansible-lint = "^25.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
